--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm t"
+    "test": "npm t",
+    "start": "webpack serve --config webpack.config.js"
   },
   "repository": {
     "type": "git",
