--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@babel/core": "^7.15.5",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "axios-mock-adapter": "^1.20.0",
     "babel-loader": "^8.2.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^6.3.0",
@@ -35,6 +34,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.22.0",
     "connected-react-router": "^6.9.1",
+    "i18next": "^21.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
