--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "redux-logger": "^3.0.6"
+    "react-router-dom": "^5.3.0"
   }
 }
